[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yar00myr <ivanucaromir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"

[tool.poetry.scripts]
start_app = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
